# tricore-gcc-toolchain-11.3.0

./: .gitignore  .gitmodules  Makefile.in  README.md  build-toolchain  build-toolchain-msys2  build-toolchain-msys2-mingw32  configure  configure.ac  install-deps
.github/workflows/: build.yml  release.yml
